# ccmemory

./: .gitignore  .prettierrc.js  .rustfmt.toml  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  package.json  tsconfig.json
crates/backend/: Cargo.toml
crates/backend/src/: daemon.rs  dirs.rs  lib.rs  server.rs
crates/backend/src/actor/: handle.rs  indexer.rs  message.rs  mod.rs  project.rs  router.rs  scheduler.rs  watcher.rs
crates/backend/src/actor/__tests__/: helpers.rs  indexing.rs  lifecycle.rs  mod.rs  watcher.rs
crates/backend/src/actor/lifecycle/: activity.rs  session.rs
crates/backend/src/actor/pipeline/: embedder.rs  mod.rs  parser.rs  reader.rs  scanner.rs  writer.rs
crates/backend/src/context/: mod.rs
crates/backend/src/context/files/: mod.rs
crates/backend/src/context/memory/: mod.rs
crates/backend/src/db/: connection.rs  events.rs  migrations.rs  mod.rs  schema.rs  stats.rs
crates/backend/src/db/code/: codes.rs  references.rs
crates/backend/src/db/document/: document_metadata.rs  documents.rs  mod.rs
crates/backend/src/db/index/: extraction_segments.rs  index_checkpoints.rs  indexed_files.rs  mod.rs
crates/backend/src/db/memory/: accumulators.rs  memories.rs  memory_relationships.rs  mod.rs
crates/backend/src/db/session/: mod.rs  session_memories.rs  sessions.rs
crates/backend/src/domain/: code.rs  config.rs  document.rs  memory.rs  mod.rs  project.rs
crates/backend/src/embedding/: mod.rs  ollama.rs  openrouter.rs  rate_limit.rs  resilient.rs  validation.rs
crates/backend/src/ipc/: client.rs  mod.rs
crates/backend/src/ipc/types/: code.rs  docs.rs  hook.rs  memory.rs  mod.rs  project.rs  relationship.rs  search.rs  system.rs  watch.rs
crates/backend/src/service/: mod.rs
crates/backend/src/service/__tests__/: code_flow.rs  explore_unified.rs  helpers.rs  memory_lifecycle.rs  mod.rs
crates/backend/src/service/code/: context.rs  index.rs  mod.rs  search.rs  startup_scan.rs  stats.rs
crates/backend/src/service/docs/: context.rs  ingest.rs  mod.rs  search.rs
crates/backend/src/service/explore/: context.rs  mod.rs  search.rs  suggestions.rs  types.rs  util.rs
crates/backend/src/service/hooks/: context.rs  event.rs  extraction.rs  handler.rs  mod.rs  observation.rs
crates/backend/src/service/memory/: dedup.rs  lifecycle.rs  mod.rs  ranking.rs  relationship.rs  search.rs
crates/backend/src/service/project/: mod.rs
crates/backend/src/service/util/: error.rs  filter.rs  format.rs  mod.rs  resolve.rs
crates/benchmark/: Cargo.toml
crates/benchmark/annotations/zed/: zed-command-system.json
crates/benchmark/scenarios/: vscode_add_feature_task.toml  vscode_blind_exploration.toml  vscode_editor.toml  vscode_extensions.toml  vscode_services.toml  zed_add_command_task.toml  zed_blind_exploration.toml  zed_bug_investigation.toml  zed_commands.toml  zed_data_flow.toml  zed_error_handling.toml  zed_feature_exploration.toml  zed_location_exploration.toml  zed_lsp.toml  zed_pattern_exploration.toml
crates/benchmark/src/: fixtures.rs  indexing.rs  lib.rs  llm_judge.rs  main.rs  session.rs  watcher.rs
crates/benchmark/src/ground_truth/: annotations.rs  call_graph.rs  mod.rs  patterns.rs
crates/benchmark/src/metrics/: accuracy.rs  mod.rs  performance.rs
crates/benchmark/src/reports/: comparison.rs  json.rs  markdown.rs  mod.rs
crates/benchmark/src/repos/: clone.rs  mod.rs  registry.rs
crates/benchmark/src/scenarios/: definition.rs  mod.rs  runner.rs
crates/cli/: Cargo.toml
crates/cli/src/: format.rs  lib.rs  logging.rs  main.rs  mcp.rs  tools.rs
crates/cli/src/commands/: admin.rs  agent.rs  context.rs  daemon.rs  hook.rs  index.rs  logs.rs  memory.rs  migrate.rs  mod.rs  projects.rs  search.rs  update.rs  watch.rs
crates/cli/src/tui/: app.rs  event.rs  mod.rs  theme.rs
crates/cli/src/tui/views/: code.rs  dashboard.rs  document.rs  memory.rs  mod.rs  search.rs  session.rs
crates/cli/src/tui/widgets/: mod.rs  salience_bar.rs
crates/llm/: Cargo.toml
crates/llm/src/: extraction.rs  lib.rs  prompts.rs  provider.rs
crates/llm/src/claude/: mod.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs  resolve.rs
crates/parser/src/queries/: python.rs  rust.rs
rewrite/: CLAUDE.md  Cargo.toml  README.md
rewrite/crates/cli/: Cargo.toml
rewrite/crates/cli/src/: lib.rs  main.rs  tools.rs
rewrite/crates/core/: Cargo.toml
rewrite/crates/core/benches/: document_bench.rs
rewrite/crates/core/src/: code.rs  config.rs  document.rs  entity.rs  error.rs  lib.rs  memory.rs  project.rs  validation.rs
rewrite/crates/daemon/: Cargo.toml
rewrite/crates/daemon/src/: hooks.rs  lib.rs  lifecycle.rs  projects.rs  router.rs  scheduler.rs  server.rs  tools.rs
rewrite/crates/daemon/tests/: integration.rs
rewrite/crates/db/: Cargo.toml
rewrite/crates/db/benches/: code_bench.rs  memory_bench.rs
rewrite/crates/db/src/: accumulators.rs  code.rs  connection.rs  document_metadata.rs  documents.rs  entities.rs  events.rs  extraction_segments.rs  index_checkpoints.rs  lib.rs  memories.rs  memory_entities.rs  memory_relationships.rs  migrations.rs  schema.rs  session_memories.rs  sessions.rs  stats.rs
rewrite/crates/embedding/: Cargo.toml
rewrite/crates/embedding/benches/: retry_bench.rs
rewrite/crates/embedding/src/: lib.rs  ollama.rs  openrouter.rs  provider.rs  resilient.rs
rewrite/crates/extract/: Cargo.toml
rewrite/crates/extract/benches/: dedup_bench.rs
rewrite/crates/extract/src/: classifier.rs  decay.rs  dedup.rs  lib.rs
rewrite/crates/index/: Cargo.toml
rewrite/crates/index/benches/: chunker_bench.rs  scanner_bench.rs
rewrite/crates/index/src/: chunker.rs  coordination.rs  debounce.rs  gitignore.rs  lib.rs  parser.rs  scanner.rs  watcher.rs
rewrite/crates/llm/: Cargo.toml
rewrite/crates/llm/src/: extraction.rs  lib.rs  prompts.rs
rewrite/crates/tui/: Cargo.toml
rewrite/crates/tui/src/: app.rs  daemon_client.rs  event.rs  lib.rs  theme.rs
rewrite/crates/tui/src/views/: code.rs  dashboard.rs  document.rs  entity.rs  memory.rs  mod.rs  search.rs  session.rs
(+274 files in other folders)
