[workspace]
resolver = "3"
members = ["crates/backend", "crates/llm", "crates/cli", "crates/benchmark"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
ccengram = { path = "crates/backend" }
llm = { path = "crates/llm", default-features = false }

# External dependencies (add with cargo add)
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
criterion = "0.8"
