[package]
name = "ccengram"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
# --- internal crates ---
llm = { workspace = true, optional = true }

# --- workspace dependencies ---
tokio = { workspace = true, features = ["net", "signal"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# --- lancedb dependencies (pinned versions) ---
lancedb = "0.23"
arrow = "56"
arrow-array = "56"
arrow-schema = "56"

# --- other dependencies ---
chrono = { version = "0.4", features = ["serde"] }
serde_with = { version = "3", features = ["macros"] }
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
reqwest = { version = "0.13", features = ["json"] }
sha2 = "0.10"
dirs = "6"
async-trait = "0.1"
rayon = "1"
ignore = "0.4"
walkdir = "2"
notify = "8"
hex = "0.4"
toml = "0.9"
fork = "0.6"
tokio-util = { version = "0.7.18", features = ["full"] }
dashmap = { version = "6.1.0", features = ["serde"] }
num_cpus = "1"

# --- tree-sitter dependencies ---
tree-sitter = { version = "0.26", optional = true }

# tier 1
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }

# tier 2
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-kotlin = { git = "https://github.com/dan0v/tree-sitter-kotlin.git", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-scala = { version = "0.24", optional = true }
tree-sitter-lua = { version = "0.4", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }

# markup/data (tier 3)
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-toml = { version = "0.20", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-markdown = { version = "0.7", optional = true }

# --- platform-specific dependencies ---
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }

[features]
default = ["tree-sitter-tier1", "claude"]

automemory = ["dep:llm"]
claude = ["automemory", "llm/claude"]

tree-sitter-tier1 = [
  "dep:tree-sitter",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-python",
  "dep:tree-sitter-javascript",
  "dep:tree-sitter-typescript",
  "dep:tree-sitter-go",
  "dep:tree-sitter-java",
  "dep:tree-sitter-c",
  "dep:tree-sitter-cpp",
]
tree-sitter-tier2 = [
  "dep:tree-sitter",
  "dep:tree-sitter-ruby",
  "dep:tree-sitter-php",
  "dep:tree-sitter-c-sharp",
  "dep:tree-sitter-kotlin",
  "dep:tree-sitter-bash",
  "dep:tree-sitter-scala",
  "dep:tree-sitter-lua",
  "dep:tree-sitter-zig",
]
tree-sitter-tier3 = [
  "dep:tree-sitter",
  "dep:tree-sitter-json",
  "dep:tree-sitter-yaml",
  "dep:tree-sitter-toml",
  "dep:tree-sitter-html",
  "dep:tree-sitter-css",
  "dep:tree-sitter-markdown",
]
tree-sitter-full = [
  "dep:tree-sitter",
  "tree-sitter-tier1",
  "tree-sitter-tier2",
  "tree-sitter-tier3",
]

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
pretty_assertions = "1"
filetime = "0.2"
