[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ccengram"
path = "src/main.rs"

[dependencies]
ccengram = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
dirs = "6"
toml = "0.9"
reqwest = { version = "0.13", features = ["json"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
unicode-width = "0.2"
uuid = { version = "1", features = ["v7", "v4"] }
