[package]
name = "llm"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dyn-clone = "1.0.20"

[features]
default = ["claude"]
claude = []
