[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ccengram"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
engram-core = { workspace = true }
daemon = { workspace = true }
tui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
dirs = "5"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
