[package]
name = "engram-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
toml = "0.8"
dirs = "6"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "document_bench"
harness = false
