[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
engram-core = { workspace = true }
db = { workspace = true }
embedding = { workspace = true }
index = { workspace = true }
extract = { workspace = true }
llm = { workspace = true }
tokio = { workspace = true, features = ["net", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v7", "v4"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
reqwest = "0.13"

[dev-dependencies]
tempfile = "3"
