[package]
name = "embedding"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
engram-core = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "retry_bench"
harness = false
