[package]
name = "index"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
engram-core = { workspace = true }
embedding = { workspace = true }
db = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = "1"
ignore = "0.4"
notify = "8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
sha2 = "0.10"
dirs = "5"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "chunker_bench"
harness = false

[[bench]]
name = "scanner_bench"
harness = false
